--- a/package.json
+++ b/package.json
@@ -20,5 +20,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0"
-  }
+  },
+  "devDependencies": {},
+  "keywords": []
 }
