--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "chatty",
   "version": "1.0.0",
   "description": "<img src=\"https://devmounta.in/img/logowhiteblue.png\" width=\"250\" align=\"right\">",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,10 @@
   },
   "homepage": "https://github.com/Alan-Miller/chatty#readme",
   "dependencies": {
-    "express": "^4.15.3"
-  }
+    "body-parser": "^1.15.2",
+    "cors": "^2.8.1",
+    "express": "^4.14.0"
+  },
+  "devDependencies": {},
+  "keywords": []
 }
